<resources>
    <string name="app_name">VIdeoRecoder</string>
    <string name="setting_paper">设置页</string>
    <string name="filter">滤镜</string>
    <string name="filter_normal">无滤镜</string>
    <string name="filter_dark">黑白</string>
    <string name="filter_gusii">模糊</string>
    <string name="filter_fudiao">浮雕</string>
    <string name="filter_mopi">磨皮美白</string>
    <string name="camera">相机</string>
    <string name="camera_front">前置</string>
    <string name="camera_back">后置</string>
    <string name="camera_type">相机类型</string>
    <string name="camera_1">camera1</string>
    <string name="camera_2">camera2</string>
    <string name="muxer">合成</string>
    <string name="muxer_GPU">硬编码</string>
    <string name="muxer_CPU">软编码</string>
    <string name="record">录制</string>
    <string name="requestPermission">请打开相关权限</string>
    <string name="title_activity_video_manager">VideoManagerActivity</string>
</resources>
