<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff8a65"
    tools:context=".UI.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingTop="34dp"
        android:text="@string/setting_paper"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:paddingLeft="12dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/orange_50"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_filter"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_normal"
            android:text="@string/filter_normal"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_dark"
            android:text="@string/filter_dark"
            android:textSize="12sp"
            android:textColor="@color/white"

            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_fudiao"
            android:text="@string/filter_fudiao"
            android:textSize="12sp"
            android:textColor="@color/white"

            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_mohu"
            android:text="@string/filter_gusii"
            android:textSize="12sp"
            android:textColor="@color/white"

            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_mopi"
            android:text="@string/filter_mopi"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_type"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rg_camera_type"
        android:layout_marginLeft="16dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera1"
            android:text="@string/camera_1"
            android:textColor="@color/white"
            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera2"
            android:text="@string/camera_2"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rg_camera"
        android:layout_marginLeft="16dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera_front"
            android:text="@string/camera_front"
            android:textColor="@color/white"
            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera_back"
            android:text="@string/camera_back"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muxer"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/white"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rg_muxer"
        android:layout_marginLeft="16dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/muxer_GPU"
            android:text="@string/muxer_GPU"
            android:textColor="@color/white"
            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/muxer_CPU"
            android:text="@string/muxer_CPU"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

    </RadioGroup>

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_text"
        android:text="@string/record"
        android:textColor="@color/main_orange"
        android:padding="5dp"
        android:gravity="center"
        />



</LinearLayout>